# iENE_infer

./: .gitignore  README.md  pyproject.toml
src/iENE_infer/: _args.py  _dataset.py  _lightning.py  _utils.py  acsmodel.py  average.py  predict.py  prepare.py
src/nnunet/nnUNet_results/Dataset001_Larynx/nnUNetTrainer__nnUNetPlans__3d_fullres/: dataset.json  dataset_fingerprint.json  plans.json
