[project]
name = "iENE_infer"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["./src/iENE_infer"]

[tool.pixi.project]
channels = ["pytorch", "conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/torch_stable.html"]

[tool.pixi.pypi-dependencies]
iENE_infer = { path = ".", editable = true }
med-imagetools = ">=1.2.0.2,<2"
acsconv = "==0.1.0"
torch = "==1.8.0"
torchvision = "==0.9.0"
pytorch-lightning = "==1.6.0"
torchio = "==0.18.86"

[tool.pixi.dependencies]
python = "3.9.*"
pandas = "==1.4.2"
scikit-learn = ">=1.5.2,<2"
python-dotenv = ">=1.0.1,<2"
cudatoolkit = "11.1.*"

[tool.pixi.activation]
env.data_root="/path/to/raw/dicom/dataset"
env.IN_PATH="/path/to/processed/nifit/dataset"
env.IN_ORG_PATH="/path/to/reorganized/nifti/dataset/for/nnunet"
env.OUT_PATH="/path/to/nnunet/outputs/or/larynx/segmentations"
env.pred_save_path="./outputs/HN1_predictions.csv"
env.ckpt_path="./src/models"

[tool.pixi.feature.nnunet]
channels = ["nvidia", "conda-forge", "pytorch"]

[tool.pixi.feature.nnunet.dependencies]
python = "3.10.*"
numpy = "1.24.3.*"
pytorch = "2.0.*"
pytorch-cuda = "11.8.*"

[tool.pixi.feature.nnunet.pypi-dependencies]
nnunetv2 = "==2.1"
acvl-utils = "==0.2"
blosc2 = "==2.7.1"

[tool.pixi.feature.nnunet.tasks]
larynx  = { cmd = "nnUNetv2_predict -i $IN_ORG_PATH -o $OUT_PATH -d 001 -device cuda -f 0 -c 3d_fullres -chk checkpoint_best.pth", env = {IN_ORG_PATH="/path/to/reorganized/nifti/dataset/for/nnunet", OUT_PATH="/path/to/nnunet/outputs/or/larynx/segmentations", nnUNet_raw="./src/nnunet/nnUNet_raw", nnUNet_results="./src/nnunet/nnUNet_results", nnUNet_preprocessed="./src/nnunet/nnUNet_preprocessed"}} 

[tool.pixi.tasks]
process = { cmd = "autopipeline $data_root $IN_PATH $--modalities CT"}
prepare = { cmd = "python src/iENE_infer/prepare.py $IN_PATH $IN_ORG_PATH"}
test = { cmd = "echo HELLO $IN_PATH $OUT_PATH $pred_save_path $ckpt_path HELLO" }
predict = { cmd = "python src/iENE_infer/predict.py --test_root $IN_ORG_PATH --test_mask $OUT_PATH --pred_save_path $pred_save_path --num_workers 4 --batch_size 4 --gpus 1 --arch acs --seed 1201 --input_size 256 256 128 --pretrained --resnet resnet18 --ckpt_path $ckpt_path" }
average = { cmd = "python src/iENE_infer/average.py --prediction_dir $pred_save_path" }

[tool.pixi.environments]
nnunet = { features = ["nnunet"], no-default-feature = true }